<resources>
    <string name="app_name">FlightRemote</string>
    <string name="port">port</string>
    <string name="IP">IP</string>
    <string name="Port">Port</string>
    <string name="connect">connect</string>
    <string name="middle">middle</string>
    <string name="startEngine">Start Engine⚡</string>
    <string name="rudder">Rudder</string>
    <string name="throttle">Throttle</string>
</resources>