<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".View"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <SeekBar
            android:id="@+id/rudder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/throttle"
            android:progress="54"
    />


    <SeekBar

            android:id="@+id/throttle"
            android:layout_width="336dp"
            android:layout_height="71dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="-153dp"
            android:layout_marginLeft="-153dp"
            android:layout_marginBottom="130dp"
            android:rotation="270"/>

    <EditText
            android:id="@+id/port"
            android:layout_width="221dp"
            android:layout_height="48dp"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/IP"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:hint="@string/Port"
            android:autofillHints="port"/>

    <EditText
            android:id="@+id/IP"
            android:layout_width="221dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:inputType="text"
            android:ems="10"
            android:hint="@string/IP"
            android:autofillHints="ip"/>

    <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:layout_below="@id/port"
            android:layout_centerHorizontal="true"
            android:onClick="onConnect"

    />


    <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp" app:srcCompat="@drawable/middle"
            android:id="@+id/middle"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/rudder"
            android:contentDescription="@string/middle"
            android:layout_alignParentRight="true"
            android:layout_marginRight="171dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="170dp"/>

    <com.example.flightremote.JoystickView
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:layout_height="300dp"
            android:id="@+id/joystick"
            android:layout_above="@id/rudder"
            android:layout_marginBottom="20dp"
    />

    <Button
            android:id="@+id/startEngine"
            android:layout_width="wrap_content"
            android:layout_height="79dp"
            android:text="@string/startEngine"
            android:layout_below="@id/rudder"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:onClick="onStartEngine"

    />
    <TextView
            android:text="@string/rudder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rudder_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_above="@id/rudder"
            android:layout_marginLeft="190dp"
            android:textColor="@color/white"

            android:layout_marginStart="190dp"/>

    <TextView
            android:text="@string/throttle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/throttle_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_above="@id/throttle"
            android:rotation="270"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_alignLeft="@id/joystick"

            android:layout_alignStart="@id/joystick"
            android:layout_marginLeft="-45dp" android:layout_marginStart="-45dp" android:layout_marginBottom="0dp"/>

</RelativeLayout>
